--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
     <title>My Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
     <link href="main.css" type="text/css"  rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <style>
         body h1{
             text-shadow: 4px 4px 4px #DCDDDC;
@@ -62,6 +63,8 @@
         }
         span{
             text-decoration: none;
+            font-size: 20px;
+            font-family: 'Cormorant Garamond', serif;
         }
 
     </style>
@@ -69,43 +72,25 @@
 </head>
 <body id="aboutme">
 
-<h1>Angel in 30 Lines</h1>
+<h1>About Me</h1>
 
 <div class="container">
     <div class="navsection">
         <a href="index.html" id="navlink">Home</a>
         <a href="aboutme.html">About Me</a>
         <a href="myclassprojects.html">My Projects</a>
-        <a href="mycontactform.html">Contacts</a>
+        <a href="mycontactform.html">Contact</a>
         <a href="myresume.html">Resume</a>
     </div>
 
 
     <div class="mytitle">
-        <p>Angel Bennett</p>
+        
     </div>
 
     <div class="content">
-            <span>Okay, so it's actually about 12 or 13 lines so far. Obviously, I'm going to change this content but this will do for now. Hmmm... Well, here's a quote from one of my favorite movies, "Raising Arizona": H.I.: [final lines] That night I had a dream. I dreamt I was as light as the ether- a floating
-                spirit visiting things to come. The shades and shadows of the people in my life rassled their way
-                their way into my slumber. I dreamed that Gale and Evelle had decided to return to prison. Probably
-                that's just as well. I don't mean to sound superior, and they're a swell couple of guys, but maybe
-                they weren't ready yet to come out into the world. And then I dreamed on, into the future, to a
-                Christmas morn in the Arizona home where Nathan Junior was opening a present from a kindly couple
-                who preferred to remain unknown. I saw Glen a few years later, still having no luck getting the cops
-                to listen to his wild tales about me and Ed. Maybe he threw in one Polack joke too many. I don't know.
-                And still I dreamed on, further into the future than I had ever dreamed before, watching Nathan
-                Junior's progress from afar, taking pride in his accomplishments as if he were our own. Wondering
-                if he ever thought of us and hoping that maybe we'd broadened his horizons a little even if he
-                couldn't remember just how they got broadened. But still I hadn't dreamt nothing about me and Ed
-                until the end. And this was cloudier cause it was years, years away. But I saw an old couple being
-                visited by their children, and all their grandchildren too. The old couple weren't screwed up. And
-                neither were their kids or their grandkids. And I don't know. You tell me. This whole dream, was it
-                wishful thinking? Was I just fleeing reality like I know I'm liable to do? But me and Ed, we can be
-                good too. And it seemed real. It seemed like us and it seemed like, well, our home. If not Arizona,
-                then a land not too far away. Where all parents are strong and wise and capable and all children are
-                happy and beloved. I don't know. Maybe it was Utah. LOL, I have 8 by the way!
-        </span>
+            <span>My life recently was turned inside out.
+I was very happy in my chosen profession, but circumstances abruptly and profoundly changed my course. Now I am developing passion that will provide a good starting point for a career. My earlier endeavor as a college student was put on the shelf for my first passion, homemaking and raising a family. It’s exciting to be able to return to my education. I’ve also added rejoining the workforce to my plate, and I’ve found that many skills that I’ve developed over the years are serving me well. I have patience and endurance that came with raising eight children. I have the steadfastness and tenacity to reach my goal, which has evolved from a position of uncertainty. The solution is that I must pursue my education. It was the inspiration of my husband that drove me to take the initiative and seek an opportunity to increase my knowledge and gain much needed experience.  He was the "computer guy". It wasn’t just a nickname. It was his profession; it was his passion.  For years we had discussed the possibility of my return to school and the potential for a career in information technology field now that our children are grown. It's a certainty that being a web developer will be my new career.</span>
     </div>
 
 </body>
