--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
     <link href="main.css" type="text/css"  rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <style>
         body h1{
             text-shadow: 4px 4px 4px #DCDDDC;
@@ -50,10 +51,11 @@
             display: block;
             text-decoration: none;
 
+
         }
 
         #navlink:hover {
-            background-color: lightgray;
+            background-color: #d3d3d3;
         }
 
         h1 {
@@ -66,8 +68,12 @@
             align-items: center;
 
         }
-        span{
+        p{
             text-decoration: none;
+            font-size: 55px;
+            font-family: 'Cormorant Garamond', serif;
+            text-align: center;
+            text-shadow: 4px 4px 4px #2f4f4f;
         }
     </style>
 
@@ -81,7 +87,7 @@
         <a href="index.html" id="navlink">Home</a>
         <a href="aboutme.html">About Me</a>
         <a href="myclassprojects.html">My Projects</a>
-        <a href="mycontactform.html">Contacts</a>
+        <a href="mycontactform.html">Contact</a>
         <a href="myresume.html">Resume</a>
     </div>
 
@@ -90,26 +96,7 @@
     </div>
 
     <div class="content">
-            <span>H.I.: [final lines] That night I had a dream. I dreamt I was as light as the ether- a floating
-                spirit visiting things to come. The shades and shadows of the people in my life rassled their way
-                their way into my slumber. I dreamed that Gale and Evelle had decided to return to prison. Probably
-                that's just as well. I don't mean to sound superior, and they're a swell couple of guys, but maybe
-                they weren't ready yet to come out into the world. And then I dreamed on, into the future, to a
-                Christmas morn in the Arizona home where Nathan Junior was opening a present from a kindly couple
-                who preferred to remain unknown. I saw Glen a few years later, still having no luck getting the cops
-                to listen to his wild tales about me and Ed. Maybe he threw in one Polack joke too many. I don't know.
-                And still I dreamed on, further into the future than I had ever dreamed before, watching Nathan
-                Junior's progress from afar, taking pride in his accomplishments as if he were our own. Wondering
-                if he ever thought of us and hoping that maybe we'd broadened his horizons a little even if he
-                couldn't remember just how they got broadened. But still I hadn't dreamt nothing about me and Ed
-                until the end. And this was cloudier cause it was years, years away. But I saw an old couple being
-                visited by their children, and all their grandchildren too. The old couple weren't screwed up. And
-                neither were their kids or their grandkids. And I don't know. You tell me. This whole dream, was it
-                wishful thinking? Was I just fleeing reality like I know I'm liable to do? But me and Ed, we can be
-                good too. And it seemed real. It seemed like us and it seemed like, well, our home. If not Arizona,
-                then a land not too far away. Where all parents are strong and wise and capable and all children are
-                happy and beloved. I don't know. Maybe it was Utah.
-        </span>
+            <p>Welcome to my domain.</p>
     </div>
 </div>
 </body>
