--- a/myclassprojects.html
+++ b/myclassprojects.html
@@ -6,11 +6,12 @@
     <title>My Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
     <link href="main.css" type="text/css"  rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <style>
         .navsection {
         display: flex;
         justify-content: space-between;
-        width: 96%;
+        width: 98%;
         background-color: #f5fffa;
         margin: 0 auto;
         border-radius: 3px;
@@ -31,12 +32,13 @@
             padding: 5px;
         }
         .mytitle{
-            width: 100%;
+            width: 98%;
             height: 250px;
+            border-radius: 3px;
             background-size: cover;
             background-image: url('img/beverly beach1.jpeg');
             margin: 20px auto;
-
+            border: 3px;
         }
         .mytitle p {
             text-align: center;
@@ -68,6 +70,15 @@
         span{
             text-decoration: none;
         }
+        .content-container{
+            width: 98%;
+            margin: 20px auto;
+            background-color: #F5F5EE;
+            border-radius: 3px;
+            padding: 10px;
+            font-family: 'Cormorant Garamond', serif;
+            font-size: 18px;
+        }
 
     </style>
 
@@ -81,7 +92,7 @@
         <a href="index.html" id="navlink">Home</a>
         <a href="aboutme.html">About Me</a>
         <a href="myclassprojects.html">My Projects</a>
-        <a href="mycontactform.html">Contacts</a>
+        <a href="mycontactform.html">Contact</a>
         <a href="myresume.html">Resume</a>
     </div>
 
@@ -89,29 +100,80 @@
     <div class="mytitle">
     </div>
 
-    <div class="content">
-        <span><h2>My Projects Area</h2>
-                <p>.H.I.: [final lines] That night I had a dream. I dreamt I was as light as the ether- a floating
-                spirit visiting things to come. The shades and shadows of the people in my life rassled their way
-                their way into my slumber. I dreamed that Gale and Evelle had decided to return to prison. Probably
-                that's just as well. I don't mean to sound superior, and they're a swell couple of guys, but maybe
-                they weren't ready yet to come out into the world. And then I dreamed on, into the future, to a
-                Christmas morn in the Arizona home where Nathan Junior was opening a present from a kindly couple
-                who preferred to remain unknown. I saw Glen a few years later, still having no luck getting the cops
-                to listen to his wild tales about me and Ed. Maybe he threw in one Polack joke too many. I don't know.</p>
-                <p>And still I dreamed on, further into the future than I had ever dreamed before, watching Nathan
-                Junior's progress from afar, taking pride in his accomplishments as if he were our own. Wondering
-                if he ever thought of us and hoping that maybe we'd broadened his horizons a little even if he
-                couldn't remember just how they got broadened. But still I hadn't dreamt nothing about me and Ed
-                until the end. And this was cloudier cause it was years, years away. But I saw an old couple being
-                visited by their children, and all their grandchildren too. The old couple weren't screwed up. And
-                    neither were their kids or their grandkids. And I don't know. You tell me.</p> <p>This whole dream, was it
-                wishful thinking? Was I just fleeing reality like I know I'm liable to do? But me and Ed, we can be
-                good too. And it seemed real. It seemed like us and it seemed like, well, our home. If not Arizona,
-                then a land not too far away. Where all parents are strong and wise and capable and all children are
-                happy and beloved. I don't know. Maybe it was Utah.</p>
-        </span>
+    <div class="content-container">
+            <div class="content">
+                <div class="row">
+                    <div class="col-md-2"><img border="0" align="left" src="img/html.png"></div>
+                    <div class="col-md-8"><p>HTML is challenging in a fun way. It's gratifying to be able to be have so
+                    many resources to help me to learn how to use this tool to create web pages. Laying out my pages has
+                    been challenging because I was having trouble following how to position the divs and how to successfully
+                    nest them if I wanted to. I can't say that I fully understand it but through trial and error I'm getting
+                    a better understanding of how to use float and flex. One problem I had was that I didn't understand that
+                    you couldn't set a fixed width, that I needed to use a percentage.</p></div>
+                    <div class="col-md-2"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12"></div>
+                    <div class="col-md-12"></div>
+                    <div class="col-md-12"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2"><img border="0" align="left" src="img/css3.jpg"></div>
+                    <div class="col-md-8"><p>Using CSS to give the make the pages of my portfolio has been a learning
+                    experience of trial and error, like learning html. I'm learning how valuable a tool it is in making
+                    visually pleasing web pages. Being able to minimize redundancies by having a central place to refer
+                    to a base code that can be used for many pages has been very helpful on this assignment</p></div>
+                    <div class="col-md-2"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12"></div>
+                    <div class="col-md-12"></div>
+                    <div class="col-md-12"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2"><img border="0" align="left" src="img/form-1.png"></div>
+                    <div class="col-md-8"><p>Forms are something that I would like to spend some time working with. I would
+                    like to have a better understanding of how they work. For this assignment I went to W3schools for help. On
+                    my contact page I made a submit button using a div but it misaligned my "faux" submit button with my reset
+                    button. I'm not sure how to fix that but I'm sure I can figure it out.</p></div>
+                    <div class="col-md-2"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12"></div>
+                    <div class="col-md-12"></div>
+                    <div class="col-md-12"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2"><img border="0" align="left" src="img/animation.jpg"></div>
+                    <div class="col-md-8"><p>Working on animations is a lot of fun. I tried out the @keyframes property to
+                        change colors from light to dark while my object was moving. I also used it to make the boxes blink
+                        in different colors and made it repeat, and made my object spin. I was also able to make the boxes
+                        change from squares to circles when hovered over.</p></div>
+                    <div class="col-md-2"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12"></div>
+                    <div class="col-md-12"></div>
+                    <div class="col-md-12"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2"><img border="0" align="left" src="img/bootstrap.jpg"></div>
+                    <div class="col-md-8"><p>Bootstrap was very helpful for this project. I was able to format my resume
+                        and apply it to myresume.html. I was also able to use it to create the image and text layout for
+                        this page.</p></div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
     </div>
+</div>
 
 </body>
 </html>
