--- a/myresume.html
+++ b/myresume.html
@@ -86,7 +86,7 @@
         <a href="index.html" id="navlink">Home</a>
         <a href="aboutme.html">About Me</a>
         <a href="myclassprojects.html">My Projects</a>
-        <a href="mycontactform.html">Contacts</a>
+        <a href="mycontactform.html">Contact</a>
         <a href="myresume.html">Resume</a>
     </div>
 
@@ -96,133 +96,135 @@
 
     <div class="content-container">
     <div class="content">
-            <div class="row">
-                <div class="col-md-4"></div>
-                <div class="col-md-4"><h2>Angeline Bennett</h2></div>
-                <div class="col-md-4"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-4"><h3>email</h3><p>seriph513@gmail.com</p></div>
-                <div class="col-md-5"></div>
-                <div class="col-md-3"><h3>cell</h3><p>801-836-1591</p></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4"><h2>Angeline Bennett</h2></div>
+                    <div class="col-md-4"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-4"><h3>Summary</h3></div>
-                <div class="col-md-8"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4"><h3>email</h3><p>seriph513@gmail.com</p></div>
+                    <div class="col-md-5"></div>
+                    <div class="col-md-3"><h3>cell</h3><p>801-836-1591</p></div>
+                </div>
 
-            <div class="row">
-            <div class="col-md-9"><p>I am a student continuing my education. I am currently attending the Web development and Programming  program at Mountainland Applied Technology College and taking online courses on Pluralsite.com and CodeSchool.com.</p></div>
-                <div class="col-md-3"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4"><h3>Summary</h3></div>
+                    <div class="col-md-8"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-4"><h3>Employment History</h3></div>
-                <div class="col-md-8"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-9"><p>I am a student continuing my education. I am currently attending the Web development and Programming  program at Mountainland Applied Technology College and taking online courses on Pluralsite.com and CodeSchool.com.</p></div>
+                    <div class="col-md-3"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-4"><h4>Deseret Industries</h4></div>
-                <div class="col-md-5"></div>
-                <div class="col-md-3"><h4>From 4/2016  To Present</h4></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4"><h3>Employment History</h3></div>
+                    <div class="col-md-8"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-3"><p>435 South 500 East</p><p>American Fork, UT 84003</p></div>
-                <div class="col-md-9"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4"><h4>Deseret Industries</h4></div>
+                    <div class="col-md-5"></div>
+                    <div class="col-md-3"><h4>From 4/2016  To Present</h4></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-12"><p>Associate: Inventory processing, pricing, quality control.</p></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-3"><p>435 South 500 East</p><p>American Fork, UT 84003</p></div>
+                    <div class="col-md-9"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-4"><h4>Advantage Computers, Inc.</h4></div>
-                <div class="col-md-5"></div>
-                <div class="col-md-3"><h4>From 3/2003 To 6/2005</h4></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-12"><p>Associate: Inventory processing, pricing, quality control.</p></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-4"><p>9326 West Sahara Suite 4<br>Las Vegas, Nevada 89117</p></div>
-                <div class="col-md-8"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4"><h4>Advantage Computers, Inc.</h4></div>
+                    <div class="col-md-5"></div>
+                    <div class="col-md-3"><h4>From 3/2003 To 6/2005</h4></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-9"><p>Office assistant: General clerical, data entry (including Quickbooks), internet, PC assembly, and various support tasks. Use of internet, MS Outlook, MS Word, MS Excel, MS Publisher, ACT, and Quickbooks.</p></div>
-                <div class="col-md-3"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4"><p>9326 West Sahara Suite 4<br>Las Vegas, Nevada 89117</p></div>
+                    <div class="col-md-8"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-4"><h4>TYCO Electronics</h4></div>
-                <div class="col-md-5"></div>
-                <div class="col-md-3"><h4>From 6/2000 To 10/2000</h4></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-9"><p>Office assistant: General clerical, data entry (including Quickbooks), internet, PC assembly, and various support tasks. Use of internet, MS Outlook, MS Word, MS Excel, MS Publisher, ACT, and Quickbooks.</p></div>
+                    <div class="col-md-3"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-8"><p>1270 Southeast Monmouth Cut Off Road<br>Dallas, Oregon 97338</p></div>
-                <div class="col-md-4"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4"><h4>TYCO Electronics</h4></div>
+                    <div class="col-md-5"></div>
+                    <div class="col-md-3"><h4>From 6/2000 To 10/2000</h4></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-9"><p>Test Technician: Followed assembly diagrams to prepare circuit boards for testing, conducted tests, demonstrated attention to detail and organizational skills.</p></div>
-                <div class="col-md-3"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-8"><p>1270 Southeast Monmouth Cut Off Road<br>Dallas, Oregon 97338</p></div>
+                    <div class="col-md-4"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-4"><h4>Computer Guy, Inc.</h4></div>
-                <div class="col-md-5"></div>
-                <div class="col-md-3"><h4>From 7/1995 To 6/2000</h4></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-9"><p>Test Technician: Followed assembly diagrams to prepare circuit boards for testing, conducted tests, demonstrated attention to detail and organizational skills.</p></div>
+                    <div class="col-md-3"></div>
+                </div>
 
-             <div class="row">
-                 <div class="col-md-8"><p>1251-B Lancaster Drive<br>Salem, Oregon 97301</p></div>
-                 <div class="col-md-4"></div>
-             </div>
-            <div class="row">
-                <div class="col-md-9"><p>Office assistant, 1/2 Shareholder: Part-time. General Office, data entry and light technical
+                <div class="row">
+                    <div class="col-md-4"><h4>Computer Guy, Inc.</h4></div>
+                    <div class="col-md-5"></div>
+                    <div class="col-md-3"><h4>From 7/1995 To 6/2000</h4></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8"><p>1251-B Lancaster Drive<br>Salem, Oregon 97301</p></div>
+                    <div class="col-md-4"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-9"><p>Office assistant, 1/2 Shareholder: Part-time. General Office, data entry and light technical
             duties including some static web page development. Use of internet, MS Outlook, MS Word,
                 MS Excel, HTML, and HotDog.</p></div>
-                <div class="col-md-3"></div>
-            </div>
+                    <div class="col-md-3"></div>
+                </div>
 
-             <div class="row">
-                 <div class="col-md-8"><h3>Education</h3></div>
-                 <div class="col-md-4"></div>
-             </div>
+                <div class="row">
+                    <div class="col-md-8"><h3>Education</h3></div>
+                    <div class="col-md-4"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-8"><h4>Mountainland Applied Technology College - 2017</h4></div>
-                <div class="col-md-4"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-8"><h4>Mountainland Applied Technology College - 2017</h4></div>
+                    <div class="col-md-4"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-4"><p>2301 West Ashton Blvd.<br>Lehi, Utah 84043</p>
+                <div class="row">
+                    <div class="col-md-4"><p>2301 West Ashton Blvd.<br>Lehi, Utah 84043</p>
                     </div>
-                <div class="col-md-8"></div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-8"><h4>Community College of Southern Nevada - 2004</h4></div>
-                <div class="col-md-4"></div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-4"><p>6375 West Charleston Boulevard<br>Las Vegas, Nevada 89146</p>
-                </div>
-                <div class="col-md-8"></div>
+                    <div class="col-md-8"></div>
                 </div>
 
-            <div class="row">
-                <div class="col-md-8"><h4>Chemeketa Community College - 2003</h4></div>
-                <div class="col-md-4"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-8"><h4>Community College of Southern Nevada - 2004</h4></div>
+                    <div class="col-md-4"></div>
+                </div>
 
-            <div class="row">
-                <div class="col-md-3"><p>4000 Lancaster Drive NE<br>Salem, Oregon 97305</p></div>
-                <div class="col-md-9"></div>
+                <div class="row">
+                    <div class="col-md-4"><p>6375 West Charleston Boulevard<br>Las Vegas, Nevada 89146</p>
+                    </div>
+                    <div class="col-md-8"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8"><h4>Chemeketa Community College - 2003</h4></div>
+                    <div class="col-md-4"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-3"><p>4000 Lancaster Drive NE<br>Salem, Oregon 97305</p></div>
+                    <div class="col-md-9"></div>
+                </div>
             </div>
-    </div>
      </div>
 </div> <!-- ending div tag -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
